V1 Final, warning: of loading setState b/ comp. is mounter

--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "camper-leaderboard",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://wcaballero.github.io/camperleaderboard",
   "dependencies": {
     "axios": "^0.16.2",
+    "gh-pages": "^1.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-scripts": "1.0.10"
   },
   "scripts": {
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
